# fin-data-hub

./: .cursorignore  .gitignore  README.md  logging.yaml  pyproject.toml  run.py
document/: grafana-dashboard.json
script/: script_tushare.py  script_tushare_backfill.py  script_tushare_backfill_fin.py
src/fin_data_hub/: __init__.py  main.py  run.py
src/fin_data_hub/config/: __init__.py  configurations.py
src/fin_data_hub/data/: __init__.py
src/fin_data_hub/data/tushare/: constants.py  tushare_data.py  tushare_data_cache.py
src/fin_data_hub/foundation/monitoring/: __init__.py  telemetry.py
src/fin_data_hub/foundation/mysql/: mysql_engine.py
src/fin_data_hub/foundation/scheduler/: __init__.py  scheduler_manager.py
src/fin_data_hub/foundation/utils/: date_utils.py
src/fin_data_hub/interfaces/: fin_data_query.py
tests/: conftest.py
tests/fin_data_hub/data/tushare/: test_tushare_data.py
